--- a/Python first steps, day 5 -- 2022-12Dec-19.ipynb
+++ b/Python first steps, day 5 -- 2022-12Dec-19.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a86f9923",
+   "id": "70dccb51",
    "metadata": {},
    "source": [
     "# Agenda: Day 5 (Modules and packages)\n",
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "19a7b1bf",
+   "id": "711e513b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "3e1f13a3",
+   "id": "56e955cd",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9cfe9339",
+   "id": "8367c5e1",
    "metadata": {},
    "source": [
     "# Modules\n",
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "40877cf5",
+   "id": "975882e9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "e010b289",
+   "id": "525fce0c",
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "04bee4a4",
+   "id": "aa37a718",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28e94030",
+   "id": "b3b4ba9a",
    "metadata": {},
    "source": [
     "# Is `random` a module, or a variable?\n",
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "492b52b2",
+   "id": "cf3b60ef",
    "metadata": {},
    "source": [
     "# Exercise: Random numbers\n",
@@ -205,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "79b1d5e1",
+   "id": "10893545",
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "2076164a",
+   "id": "8e09dbee",
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e854124",
+   "id": "86f6b4b0",
    "metadata": {},
    "source": [
     "When we use `import`, we're basically doing two things:\n",
@@ -283,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "e847ad99",
+   "id": "5da2f816",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "ed835409",
+   "id": "3f68afca",
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7663999",
+   "id": "46e0e67a",
    "metadata": {},
    "source": [
     "What if I'm going to use `random.randint` many times in my program. Can I just write `randint`, without `random.` before it?\n",
@@ -347,7 +347,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "ba7e1c7c",
+   "id": "c69186ce",
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +369,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "b929dea2",
+   "id": "27d64a24",
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "efca47b1",
+   "id": "829a2210",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +402,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "9bb03a2b",
+   "id": "4f466159",
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e67f91c2",
+   "id": "7a5b1a93",
    "metadata": {},
    "source": [
     "# A few things about `from .. import ..`\n",
@@ -439,7 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "8de05172",
+   "id": "34e9996f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "d6488cbc",
+   "id": "31d69b07",
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +483,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "be6912b8",
+   "id": "1ea0dd96",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a710118b",
+   "id": "d2d2e676",
    "metadata": {},
    "source": [
     "# Four ways to `import`:\n",
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b67cd1b",
+   "id": "dffaab22",
    "metadata": {},
    "source": [
     "# Exercise: Filenames that match\n",
@@ -529,7 +529,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "6900a651",
+   "id": "507cccac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -539,7 +539,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "e71a9265",
+   "id": "54f43d0b",
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +567,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "1419fe66",
+   "id": "22924228",
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +592,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "b3db7e29",
+   "id": "b9db557d",
    "metadata": {},
    "outputs": [
     {
@@ -618,7 +618,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "6c829751",
+   "id": "526f9523",
    "metadata": {},
    "outputs": [
     {
@@ -653,9 +653,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a9c47db2",
+   "metadata": {},
+   "source": [
+    "# Next up\n",
+    "\n",
+    "1. What attributes (data + functions) does a module contain?\n",
+    "2. Developing a module"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49bf7410",
+   "id": "8e91c1bd",
    "metadata": {},
    "outputs": [],
    "source": []
