--- a/Python first steps, day 5 -- 2022-12Dec-19.ipynb
+++ b/Python first steps, day 5 -- 2022-12Dec-19.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "70dccb51",
+   "id": "a15d43b3",
    "metadata": {},
    "source": [
     "# Agenda: Day 5 (Modules and packages)\n",
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "711e513b",
+   "id": "397bf616",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "56e955cd",
+   "id": "4cde9e9b",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8367c5e1",
+   "id": "93f0dff6",
    "metadata": {},
    "source": [
     "# Modules\n",
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "975882e9",
+   "id": "ae92b68b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "525fce0c",
+   "id": "ff665592",
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "aa37a718",
+   "id": "05b81a58",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3b4ba9a",
+   "id": "8b1df907",
    "metadata": {},
    "source": [
     "# Is `random` a module, or a variable?\n",
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf3b60ef",
+   "id": "9f5a1747",
    "metadata": {},
    "source": [
     "# Exercise: Random numbers\n",
@@ -205,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "10893545",
+   "id": "2c237674",
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "8e09dbee",
+   "id": "d84746d7",
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86f6b4b0",
+   "id": "f1d1e452",
    "metadata": {},
    "source": [
     "When we use `import`, we're basically doing two things:\n",
@@ -283,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "5da2f816",
+   "id": "c0e9ec39",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "3f68afca",
+   "id": "770e66da",
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "46e0e67a",
+   "id": "5eb3ea8b",
    "metadata": {},
    "source": [
     "What if I'm going to use `random.randint` many times in my program. Can I just write `randint`, without `random.` before it?\n",
@@ -347,7 +347,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "c69186ce",
+   "id": "5c0c8e9b",
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +369,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "27d64a24",
+   "id": "a7ca3b53",
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "829a2210",
+   "id": "ca87952c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +402,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "4f466159",
+   "id": "5d13ff0a",
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7a5b1a93",
+   "id": "76e24fc4",
    "metadata": {},
    "source": [
     "# A few things about `from .. import ..`\n",
@@ -439,7 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "34e9996f",
+   "id": "905374cd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "31d69b07",
+   "id": "925130dc",
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +483,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "1ea0dd96",
+   "id": "6507d95b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2d2e676",
+   "id": "c3efdd3f",
    "metadata": {},
    "source": [
     "# Four ways to `import`:\n",
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dffaab22",
+   "id": "4995b235",
    "metadata": {},
    "source": [
     "# Exercise: Filenames that match\n",
@@ -529,7 +529,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "507cccac",
+   "id": "fda6a50b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -539,7 +539,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "54f43d0b",
+   "id": "eced91a8",
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +567,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "22924228",
+   "id": "fcf2452e",
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +592,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "b9db557d",
+   "id": "2e52dc17",
    "metadata": {},
    "outputs": [
     {
@@ -618,7 +618,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "526f9523",
+   "id": "75975953",
    "metadata": {},
    "outputs": [
     {
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9c47db2",
+   "id": "ca48d2f4",
    "metadata": {},
    "source": [
     "# Next up\n",
@@ -665,11 +665,76 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 25,
+   "id": "6a054335",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['mini-access-log.txt',\n",
+       " 'nums.txt',\n",
+       " 'shoe-data.txt',\n",
+       " 'linux-etc-passwd.txt',\n",
+       " 'wcfile.txt',\n",
+       " 'myfile.txt']"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# if I want to search for files in the current directory, then I don't use a / in the pattern\n",
+    "\n",
+    "glob.glob('*.txt')   # looks for .txt files in the current directory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "19c9afff",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['/Users/reuven/Desktop/draft-pytest-book-notes.txt',\n",
+       " '/Users/reuven/Desktop/brennan-workshop-notes.txt',\n",
+       " '/Users/reuven/Desktop/college-institutions-colnames.txt',\n",
+       " '/Users/reuven/Desktop/learning-paths.txt',\n",
+       " '/Users/reuven/Desktop/badfile.txt',\n",
+       " '/Users/reuven/Desktop/al-chet-python.txt',\n",
+       " '/Users/reuven/Desktop/myfile.txt',\n",
+       " '/Users/reuven/Desktop/goodfile.txt',\n",
+       " '/Users/reuven/Desktop/ari-interview.txt',\n",
+       " '/Users/reuven/Desktop/machine-learning-links.txt',\n",
+       " '/Users/reuven/Desktop/podia-email-1.txt',\n",
+       " '/Users/reuven/Desktop/asyncio-notes.txt',\n",
+       " '/Users/reuven/Desktop/mohammed-email-1.txt']"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# If I include a / in the pattern, then it'll look in the appropriate directory\n",
+    "\n",
+    "glob.glob('/Users/reuven/Desktop/*.txt')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "8e91c1bd",
+   "id": "c21cbec1",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# if I'm on W"
+   ]
   }
  ],
  "metadata": {
