--- a/Python first steps, day 5 -- 2022-12Dec-19.ipynb
+++ b/Python first steps, day 5 -- 2022-12Dec-19.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a9f2fb7f",
+   "id": "90c05974",
    "metadata": {},
    "source": [
     "# Agenda: Day 5 (Modules and packages)\n",
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "0cee7e6f",
+   "id": "6193854f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "da4734ae",
+   "id": "05d7a722",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc4c9176",
+   "id": "dc30e5fd",
    "metadata": {},
    "source": [
     "# Modules\n",
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "3153d377",
+   "id": "242044a2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ee708c2d",
+   "id": "23206c3c",
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "13af637d",
+   "id": "04b7628d",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b73cd155",
+   "id": "0218fc83",
    "metadata": {},
    "source": [
     "# Is `random` a module, or a variable?\n",
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e13dbb04",
+   "id": "833b5eb6",
    "metadata": {},
    "source": [
     "# Exercise: Random numbers\n",
@@ -205,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "f63a7b18",
+   "id": "7727996a",
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "5345ac85",
+   "id": "edd50ab6",
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58686bf7",
+   "id": "2e68cb79",
    "metadata": {},
    "source": [
     "When we use `import`, we're basically doing two things:\n",
@@ -283,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "61bcc209",
+   "id": "e0375a20",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "19882bcb",
+   "id": "b05391e1",
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef3db4ae",
+   "id": "d7833452",
    "metadata": {},
    "source": [
     "What if I'm going to use `random.randint` many times in my program. Can I just write `randint`, without `random.` before it?\n",
@@ -347,7 +347,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "52579601",
+   "id": "15d4b169",
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +369,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "bf2359da",
+   "id": "42deef29",
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "60f17f0f",
+   "id": "b1a28c76",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +402,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "f304f614",
+   "id": "2429d816",
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "afc7f1e7",
+   "id": "73c4fa4e",
    "metadata": {},
    "source": [
     "# A few things about `from .. import ..`\n",
@@ -439,7 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "65190b7a",
+   "id": "0f82902d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "aadaaab7",
+   "id": "29ddf1c6",
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +483,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "6e5bf38b",
+   "id": "d8d2b81e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54a81953",
+   "id": "6848b210",
    "metadata": {},
    "source": [
     "# Four ways to `import`:\n",
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a23106e6",
+   "id": "d490239e",
    "metadata": {},
    "source": [
     "# Exercise: Filenames that match\n",
@@ -529,7 +529,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "0642a7fe",
+   "id": "121c328e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -539,7 +539,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "6ad944a5",
+   "id": "c3a41fb6",
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +567,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "53de802e",
+   "id": "7e669359",
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +592,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "78e25aa5",
+   "id": "cc12a7cb",
    "metadata": {},
    "outputs": [
     {
@@ -618,7 +618,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "0d575788",
+   "id": "c739aa64",
    "metadata": {},
    "outputs": [
     {
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f5f6172",
+   "id": "31210f8e",
    "metadata": {},
    "source": [
     "# Next up\n",
@@ -666,7 +666,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "b3d59ec1",
+   "id": "294802a7",
    "metadata": {},
    "outputs": [
     {
@@ -694,7 +694,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "a76c1d98",
+   "id": "33c3a8f9",
    "metadata": {},
    "outputs": [
     {
@@ -729,7 +729,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "d202473a",
+   "id": "86fdbde6",
    "metadata": {},
    "outputs": [
     {
@@ -752,14 +752,113 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fbd56cc2",
+   "id": "1a749b7c",
    "metadata": {},
    "source": [
     "# What's in a module?\n",
     "\n",
     "It's very nice to say that we can load a module with `import`. But once we've loaded a module, how do we know what names it contains? How do we know what those names are, and how to use them?\n",
     "\n",
-    "1. We can always use, on any object in Python, the `dir` function. This returns a list of "
+    "1. We can always use, on any object in Python, the `dir` function. This returns a list of strings, the attributes we can use on the object.\n",
+    "2. Usually, modules have documentation — we can use `help` and other tools, as well as Web sites, to get that."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "db419f30",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['BPF',\n",
+       " 'LOG4',\n",
+       " 'NV_MAGICCONST',\n",
+       " 'RECIP_BPF',\n",
+       " 'Random',\n",
+       " 'SG_MAGICCONST',\n",
+       " 'SystemRandom',\n",
+       " 'TWOPI',\n",
+       " '_ONE',\n",
+       " '_Sequence',\n",
+       " '_Set',\n",
+       " '__all__',\n",
+       " '__builtins__',\n",
+       " '__cached__',\n",
+       " '__doc__',\n",
+       " '__file__',\n",
+       " '__loader__',\n",
+       " '__name__',\n",
+       " '__package__',\n",
+       " '__spec__',\n",
+       " '_accumulate',\n",
+       " '_acos',\n",
+       " '_bisect',\n",
+       " '_ceil',\n",
+       " '_cos',\n",
+       " '_e',\n",
+       " '_exp',\n",
+       " '_floor',\n",
+       " '_index',\n",
+       " '_inst',\n",
+       " '_isfinite',\n",
+       " '_log',\n",
+       " '_os',\n",
+       " '_pi',\n",
+       " '_random',\n",
+       " '_repeat',\n",
+       " '_sha512',\n",
+       " '_sin',\n",
+       " '_sqrt',\n",
+       " '_test',\n",
+       " '_test_generator',\n",
+       " '_urandom',\n",
+       " '_warn',\n",
+       " 'betavariate',\n",
+       " 'choice',\n",
+       " 'choices',\n",
+       " 'expovariate',\n",
+       " 'gammavariate',\n",
+       " 'gauss',\n",
+       " 'getrandbits',\n",
+       " 'getstate',\n",
+       " 'lognormvariate',\n",
+       " 'normalvariate',\n",
+       " 'paretovariate',\n",
+       " 'randbytes',\n",
+       " 'randint',\n",
+       " 'random',\n",
+       " 'randrange',\n",
+       " 'sample',\n",
+       " 'seed',\n",
+       " 'setstate',\n",
+       " 'shuffle',\n",
+       " 'triangular',\n",
+       " 'uniform',\n",
+       " 'vonmisesvariate',\n",
+       " 'weibullvariate']"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# I want to know what attributes are available on \"random\"\n",
+    "\n",
+    "dir(random)  # this returns a list of strings"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b16fa9f8",
+   "metadata": {},
+   "source": [
+    "# Unusual attribute names\n",
+    "\n",
+    "- Names that begin with a single `_` in Python are considered to be \"private.\" The language won't enforce this privacy; we can do whatever we want. But "
    ]
   }
  ],
