--- a/Python first steps, day 5 -- 2022-12Dec-19.ipynb
+++ b/Python first steps, day 5 -- 2022-12Dec-19.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "90c05974",
+   "id": "481e97da",
    "metadata": {},
    "source": [
     "# Agenda: Day 5 (Modules and packages)\n",
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "6193854f",
+   "id": "134384cd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "05d7a722",
+   "id": "ee66145c",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc30e5fd",
+   "id": "2d9702ee",
    "metadata": {},
    "source": [
     "# Modules\n",
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "242044a2",
+   "id": "36478893",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "23206c3c",
+   "id": "f3147391",
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "04b7628d",
+   "id": "ea995475",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0218fc83",
+   "id": "caa19bec",
    "metadata": {},
    "source": [
     "# Is `random` a module, or a variable?\n",
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "833b5eb6",
+   "id": "fc2a2364",
    "metadata": {},
    "source": [
     "# Exercise: Random numbers\n",
@@ -205,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "7727996a",
+   "id": "3b29ef6e",
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "edd50ab6",
+   "id": "54e8e760",
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e68cb79",
+   "id": "51207805",
    "metadata": {},
    "source": [
     "When we use `import`, we're basically doing two things:\n",
@@ -283,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "e0375a20",
+   "id": "6c5c7093",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "b05391e1",
+   "id": "44c86e5a",
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7833452",
+   "id": "bf592510",
    "metadata": {},
    "source": [
     "What if I'm going to use `random.randint` many times in my program. Can I just write `randint`, without `random.` before it?\n",
@@ -347,7 +347,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "15d4b169",
+   "id": "f3daa5a6",
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +369,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "42deef29",
+   "id": "8f5e9e12",
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "b1a28c76",
+   "id": "c36d55af",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +402,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "2429d816",
+   "id": "22cbbc9c",
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73c4fa4e",
+   "id": "7c6e8d51",
    "metadata": {},
    "source": [
     "# A few things about `from .. import ..`\n",
@@ -439,7 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "0f82902d",
+   "id": "d745f2e1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "29ddf1c6",
+   "id": "fce903a8",
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +483,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "d8d2b81e",
+   "id": "922c2756",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6848b210",
+   "id": "98e949bc",
    "metadata": {},
    "source": [
     "# Four ways to `import`:\n",
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d490239e",
+   "id": "c4202e9e",
    "metadata": {},
    "source": [
     "# Exercise: Filenames that match\n",
@@ -529,7 +529,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "121c328e",
+   "id": "c90645f8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -539,7 +539,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "c3a41fb6",
+   "id": "b67caf46",
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +567,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "7e669359",
+   "id": "8dc4fc10",
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +592,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "cc12a7cb",
+   "id": "2f261076",
    "metadata": {},
    "outputs": [
     {
@@ -618,7 +618,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "c739aa64",
+   "id": "99c8a1d3",
    "metadata": {},
    "outputs": [
     {
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31210f8e",
+   "id": "1d7b336f",
    "metadata": {},
    "source": [
     "# Next up\n",
@@ -666,7 +666,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "294802a7",
+   "id": "57fe90ee",
    "metadata": {},
    "outputs": [
     {
@@ -694,7 +694,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "33c3a8f9",
+   "id": "7fc4e7cb",
    "metadata": {},
    "outputs": [
     {
@@ -729,7 +729,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "86fdbde6",
+   "id": "6b89a64d",
    "metadata": {},
    "outputs": [
     {
@@ -752,7 +752,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a749b7c",
+   "id": "9a78cc04",
    "metadata": {},
    "source": [
     "# What's in a module?\n",
@@ -766,7 +766,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "db419f30",
+   "id": "33fd8e58",
    "metadata": {},
    "outputs": [
     {
@@ -853,13 +853,49 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b16fa9f8",
+   "id": "665c6886",
    "metadata": {},
    "source": [
     "# Unusual attribute names\n",
     "\n",
-    "- Names that begin with a single `_` in Python are considered to be \"private.\" The language won't enforce this privacy; we can do whatever we want. But "
+    "- Names that begin with a single `_` in Python are considered to be \"private.\" The language won't enforce this privacy; we can do whatever we want. But by convention, we should leave such things alone.\n",
+    "- Names that begin and end with a double `__` are often called \"dunders.\" These are typically methods that are defined to be invoked by Python at special times.  You probably don't want to run these or use these.\n",
+    "- Names in ALL CAPS are considered to be constants. Python doesn't really have constants, but we're supposed to, by convention, not change these.\n",
+    "\n",
+    "How do we know which of these attributes are data, and which are functions?  For that, we need to snoop around a bit more.\n",
+    "\n",
+    "One option is the \"help\" function"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "ee70ca42",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on method randint in module random:\n",
+      "\n",
+      "randint(a, b) method of random.Random instance\n",
+      "    Return random integer in range [a, b], including both end points.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(random.randint) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ffd6f987",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
